feat: add phpstan to pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,6 @@ jobs:
         DB_CONNECTION: sqlite
         DB_DATABASE: ":memory:"
       run: php artisan test --stop-on-failure
+    
+    - name: Run PHPStan
+      run: ./vendor/bin/phpstan
