--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-data": "^4.11",
         "thejano/laravel-domain-driven-design": "^1.1"
     },
     "require-dev": {
